--- a/src/Tddo1.css
+++ b/src/Tddo1.css
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
 }
-
-body {
-  background-color: #020631;
+.body{
+  background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
 }
-
+body {
+background-color:lightseagreen;
+}
 .app {
   position: absolute;
   top: 10%;
