--- a/src/Register.css
+++ b/src/Register.css
@@ -1,7 +1,7 @@
 
-input[type=text], input[type=email], input[type=Date],input {
+input[type=text], input[type=email], input[type=Date] {
     width: 100%;
-    padding: 15px;
+    padding: 10px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
