Dash board with lazy loading

--- a/src/dash.css
+++ b/src/dash.css
@@ -1,4 +1,4 @@
-div.gallery {
+git div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     display: inline-block;
@@ -8,7 +8,7 @@ div.gallery {
   }
   
   div.gallery:hover {
-    border: 1px solid #777;
+    border: 1px solid rgb(208, 176, 176);
   }
   
   div.gallery img {
